# picarro-shared

./: .gitignore  CMakeLists.txt  LICENSE.txt  Makefile  README.md
src/: CMakeLists.txt
src/apps/: CMakeLists.txt
src/apps/demo/: CMakeLists.txt  README.md
src/apps/demo/cpp/: CMakeLists.txt  README.md
src/apps/demo/cpp/api/: CMakeLists.txt  README.md  demo-api.c++  demo-api.h++  demo-provider.c++  demo-provider.h++  demo-signals.c++  demo-signals.h++  demo-types.c++  demo-types.h++
src/apps/demo/cpp/daemon/: CMakeLists.txt  README.md  implementations.c++  implementations.h++  main.c++  options.c++  options.h++
src/apps/demo/cpp/impl/: CMakeLists.txt  README.md
src/apps/demo/cpp/utils/: CMakeLists.txt
src/apps/demo/experimental/protodefs/: demo_service.proto
src/apps/demo/idl/: CMakeLists.txt  README.md  demo-interface.idl  demo-types.idl
src/apps/demo/proto/: CMakeLists.txt  demo_service.proto  demo_types.proto
src/apps/demo/protodefs/: CMakeLists.txt
src/apps/demo/python/: CMakeLists.txt  demo-grpc-server.py  demo-zmq-server.py  demo_client.py  demo_grpc_client.py  demo_zmq_client.py
src/apps/demo/settings/: demo-dds-tool.json  demo-tool.json  demo-zmq-tool.json  demoserver.json
src/core/: CMakeLists.txt
src/core/cpp/: CMakeLists.txt
src/core/cpp/inner-core/: CMakeLists.txt
src/core/cpp/inner-core/common/: CMakeLists.txt
src/core/cpp/outer-core/: CMakeLists.txt
src/core/cpp/outer-core/io/: CMakeLists.txt
src/core/cpp/outer-core/messaging/: CMakeLists.txt
src/core/idl/: CMakeLists.txt  common-types.idl  event-types.idl
src/core/proto/: CMakeLists.txt  variant_types.proto
src/core/python/: CMakeLists.txt
src/core/python/core/: invocation.py  jsonreader.py  settingsstore.py  signal_slot.py  timeutil.py
src/core/python/io/protobuf/: custom_types.py  signalstore.py  standard_types.py
src/core/python/messaging/common/: __init__.py  endpoint.py
src/core/python/messaging/grpc/: __init__.py  base.py  client.py  client_interceptor.py  client_reader.py  server.py  service.py  signal_client.py  signal_service.py  signalclient.py  signalservice.py  status.py
src/core/python/messaging/http/: __init__.py  base.py  client.py
src/core/python/messaging/rest/: client.py
src/core/settings/: defaults.json
src/crust/: CMakeLists.txt
src/crust/common/: CMakeLists.txt
src/crust/common/settings/: dds-endpoints-common.json  grpc-endpoints-common.json
src/crust/common/shell/python/: CMakeLists.txt  shell.py
src/crust/demoproduct/: CMakeLists.txt
src/crust/demoproduct/settings/: grpc-endpoints-demoproduct.json  zmq-endpoints-demoproduct.json
src/crust/demoproduct/shell/: CMakeLists.txt
src/crust/demoproduct/shell/python/: CMakeLists.txt  demoshell.py
src/mantle/: CMakeLists.txt
src/mantle/apps/: CMakeLists.txt
src/mantle/apps/demo/: CMakeLists.txt  README.md
src/mantle/apps/demo/proto/: CMakeLists.txt
src/mantle/apps/demo/python/: demo-grpc-server.py
src/mantle/apps/demo/settings/: demo-grpc-tool.json
src/mantle/demo/: CMakeLists.txt
src/mantle/demo/cpp/: CMakeLists.txt
src/mantle/demo/cpp/api/: README.md  demo-provider.c++  demo-provider.h++  demo-signals.h++  demo-types.c++
src/mantle/demo/cpp/daemon/: CMakeLists.txt  main.c++  options.h++
src/mantle/demo/cpp/impl/: CMakeLists.txt
src/mantle/demo/idl/: CMakeLists.txt
src/mantle/demo/proto/: CMakeLists.txt  demo.proto
src/mantle/demo/python/: CMakeLists.txt  demo-grpc-async-client.py  demo-grpc-async-server.py  demo-grpc-server.py
src/mantle/demo/settings/: demoserver.json
src/products/: CMakeLists.txt
src/products/common/: CMakeLists.txt
src/products/common/settings/: common-services.json  grpc-services-common.json  rest-services-common.json  zmq-channels-common.json  zmq-endpoints-common.json
src/products/common/shell/python/: shell.py
src/products/demoproduct/: CMakeLists.txt
src/products/demoproduct/settings/: zmq-endpoints-demoproduct.json
src/products/demoproduct/shell/: CMakeLists.txt
src/products/demoproduct/shell/python/: CMakeLists.txt  demoshell.py
src/shared/: CMakeLists.txt
src/shared/cpp/: CMakeLists.txt
src/shared/cpp/core/: CMakeLists.txt  sourcepath.h.in  version.h.in
src/shared/cpp/core/application/: CMakeLists.txt
src/shared/cpp/core/argparse/: CMakeLists.txt  client.c++  client.h++  command.c++  command.h++  common.c++  common.h++  option.c++  option.h++  parser.c++  parser.h++  server.c++  server.h++
src/shared/cpp/core/buildinfo/: buildinfo.h.in
src/shared/cpp/core/chrono/: CMakeLists.txt  date-time.c++  date-time.h++  scheduler.c++  scheduler.h++
src/shared/cpp/core/config/: CMakeLists.txt  settings.c++  settings.h++  settingsstore.c++  settingsstore.h++
src/shared/cpp/core/io/: streambuffer.c++
src/shared/cpp/core/json/: CMakeLists.txt  jsondecoder.c++  jsondecoder.h++  jsonencoder.h++  jsonreader.c++  jsonreader.h++  jsonwriter.h++
src/shared/cpp/core/logging/: CMakeLists.txt  dispatcher.c++  dispatcher.h++  logging.c++  logging.h++
src/shared/cpp/core/platform/: CMakeLists.txt  hid.c++  hid.h++  init.h++  logsink.c++  logsink.h++  path.c++  path.h++  process.c++  process.h++  provider.h++  runtime.c++  runtime.h++  symbols.c++  (+5 more)
src/shared/cpp/ipc/: CMakeLists.txt
src/shared/idl/: CMakeLists.txt  common-types.idl  event-types.idl  variant-types.idl
src/shared/proto/: CMakeLists.txt  event_types.proto  request_reply.proto  variant_types.proto
src/shared/python/: CMakeLists.txt  buildinfo.py.in  container.py  dds_base.py  dds_listener.py  grpc_base.py  grpc_client.py  grpc_server.py  grpc_signalclient.py  grpc_status.py  jsonreader.py  paths.py  protobuf_custom_types.py  protobuf_standard_types.py  safe_invoke.py  scalar_types.py  settingsstore.py
src/shared/python/core/: invocation.py  scalar_types.py  scheduler.py  settingsstore.py  signal_slot.py  stringexpander.py
src/shared/settings/: defaults.json
src/tests/: CMakeLists.txt
src/tests/python-runtime/: CMakeLists.txt
src/tests/python-runtime/cpp/: CMakeLists.txt  main.c++
src/tests/rest-tool/cpp/: CMakeLists.txt  main.c++
(+1022 files in other folders)
