## -*- cmake -*-
#===============================================================================
## @file CMakeLists.txt
## @description CMake rules to build Picarro applications
## @author Tor Slettnes <tslettnes@picarro.com>
#===============================================================================

add_subdirectory(apps)

