## -*- cmake -*-
#===============================================================================
## @file CMakeLists.txt
## @description CMake rules to build Picarro applications
## @author Tor Slettnes <tslettnes@picarro.com>
#===============================================================================

if (BUILD_DEMO)
  add_subdirectory(demo)
endif()

