##
## -*- cmake -*-
#===============================================================================
## @file CMakeLists.txt
## @description CMake rules to build Picarro Demo application
## @author Tor Slettnes <tslettnes@picarro.com>
#===============================================================================

add_subdirectory(api)
add_subdirectory(impl)
add_subdirectory(daemon)
add_subdirectory(utils)
