## -*- cmake -*-
#===============================================================================
## @file CMakeLists.txt
## @description Demo application interface - DDS implementation
## @author Tor Slettnes <tslettnes@picarro.com>
#===============================================================================

add_subdirectory(types)
add_subdirectory(server)
add_subdirectory(client)
